--- a/bscs24134.html
+++ b/bscs24134.html
@@ -5,14 +5,19 @@
 
 <head >
 <Link rel="stylesheet" href="bscs24134.css">
-    
-<title> BSCS24134 </title>
+
+<title> Lab-9 BSCS24134 </title>
 
 </head>
 
 <body>
 
-<!-- Content goes here -->
+
+<!--Information-->
+
+<p>Name: Eman Fatime</p>
+<p>Roll number: bscs24134</p>
+<p>Subject: Application of ICT</p>
 
 </body>
 
