--- a/bscs24134.html
+++ b/bscs24134.html
@@ -19,6 +19,22 @@
 <p>Roll number: bscs24134</p>
 <p>Subject: Application of ICT</p>
 
+<!--Click Image-->
+
+<a href = "https://www.google.com"> Visit Google </a>
+<p>
+    <image src="c:\Users\z\Desktop\ICT.jpg" width= "500" height= "200"> 
+</p>
+
+
+<!--Gmail account-->
+
+<p>
+    <a href="https://www.gmail.com" target= "_blank ">Go to gmail </a>
+</p>
+    
+    
+
 </body>
 
 </html>
