--- a/bscs24134.html
+++ b/bscs24134.html
@@ -32,7 +32,20 @@
 <p>
     <a href="https://www.gmail.com" target= "_blank ">Go to gmail </a>
 </p>
-    
+   
+<!--Order and unorder lists-->
+
+<ol>
+    <li>HTML</li>
+    <li>CSS</li>
+    <li>Java Script</li>
+</ol>
+
+<ul>
+    <li>Frontend Development</li>
+    <li>Backend Development</li>
+    <li>Fullstack Development</li>
+</ul>
     
 
 </body>
