--- a/bscs24134.html
+++ b/bscs24134.html
@@ -4,7 +4,7 @@
 <html>
 
 <head >
-<Link rel="stylesheet" href="bscs24134.css">
+<Link rel="stylesheet" href="bscs23134.css">
 
 <title> Lab-9 BSCS24134 </title>
 
@@ -35,18 +35,31 @@
    
 <!--Order and unorder lists-->
 
+<p> <b> Ordered List </b></p>
 <ol>
     <li>HTML</li>
     <li>CSS</li>
     <li>Java Script</li>
 </ol>
 
+<p> <b> Unorderd List </b> </p>
 <ul>
     <li>Frontend Development</li>
     <li>Backend Development</li>
     <li>Fullstack Development</li>
 </ul>
-    
+
+ <!--Styled Div-->
+
+ <Div class= "first">
+
+   <p>Life is a gift, filled with endless opportunities to grow, learn, and make a difference.
+     Every day is a chance to start fresh, overcome challenges, and become a better version of yourself. 
+     Embrace each moment, stay positive, and remember that even small steps can lead to big changes. Believe in yourself, and let your dreams guide you forward!
+     Life is not measured by the breaths we take, but by the moments that take our breath away.</p> 
+
+ </Div>
+
 
 </body>
 
