--- a/bscs24134.html
+++ b/bscs24134.html
@@ -59,7 +59,13 @@
      Life is not measured by the breaths we take, but by the moments that take our breath away.</p> 
 
  </Div>
+<!--About topic-->
 
+<p class="normal-para">I would love to visit Japan someday.</p>
+<p class="normal-para">The country has a beautiful blend of modern technology and rich traditions.</p>
+<p class="normal-para">Japan's cherry blossom season is breathtaking and attracts visitors from all over the world.</p>
+<p class="normal-para">Japanese cuisine, especially sushi and ramen, is one of my favorites.</p>
+<p class="normal-para" id="fav-para">Exploring the peaceful temples and vibrant cities would be an unforgettable experience.</p>
 
 </body>
 
