--- a/bscs24134.html
+++ b/bscs24134.html
@@ -15,15 +15,18 @@
 
 <!--Information-->
 
-<p>Name: Eman Fatime</p>
-<p>Roll number: bscs24134</p>
-<p>Subject: Application of ICT</p>
+<section>
+    <p>Name: Eman Fatime</p>
+    <p>Roll number: bscs24134</p>
+    <p>Subject: Application of ICT</p>
+</section>
+
 
 <!--Click Image-->
 
 <a href = "https://www.google.com"> Visit Google </a>
 <p>
-    <image src="c:\Users\z\Desktop\ICT.jpg" width= "500" height= "200"> 
+    <image class="banner" src="c:\Users\z\Desktop\ICT.jpg" width= "500" height= "200"> 
 </p>
 
 
@@ -53,19 +56,24 @@
 
  <Div class= "first">
 
-   <p>Life is a gift, filled with endless opportunities to grow, learn, and make a difference.
-     Every day is a chance to start fresh, overcome challenges, and become a better version of yourself. 
-     Embrace each moment, stay positive, and remember that even small steps can lead to big changes. Believe in yourself, and let your dreams guide you forward!
-     Life is not measured by the breaths we take, but by the moments that take our breath away.</p> 
-
+<section class="two">
+    <p>Life is a gift, filled with endless opportunities to grow, learn, and make a difference.
+        Every day is a chance to start fresh, overcome challenges, and become a better version of yourself. 
+        Embrace each moment, stay positive, and remember that even small steps can lead to big changes. Believe in yourself, and let your dreams guide you forward!
+        Life is not measured by the breaths we take, but by the moments that take our breath away.</p> 
+   
+</section>
+   
  </Div>
 <!--About topic-->
-
-<p class="normal-para">I would love to visit Japan someday.</p>
-<p class="normal-para">The country has a beautiful blend of modern technology and rich traditions.</p>
-<p class="normal-para">Japan's cherry blossom season is breathtaking and attracts visitors from all over the world.</p>
-<p class="normal-para">Japanese cuisine, especially sushi and ramen, is one of my favorites.</p>
-<p class="normal-para" id="fav-para">Exploring the peaceful temples and vibrant cities would be an unforgettable experience.</p>
+<section class="one">
+    <p class="normal-para">I would love to visit Japan someday.</p>
+    <p class="normal-para">The country has a beautiful blend of modern technology and rich traditions.</p>
+    <p class="normal-para">Japan's cherry blossom season is breathtaking and attracts visitors from all over the world.</p>
+    <p class="normal-para">Japanese cuisine, especially sushi and ramen, is one of my favorites.</p>
+    <p class="normal-para" id="fav-para">Exploring the peaceful temples and vibrant cities would be an unforgettable experience.</p>
+    
+</section>
 
 </body>
 
